Gradle: Updates for Java 17 compatibility